Octree Spatial Partitioning and Other Bits and Pieces
- OctreeEEEEEE -

This probably deserves its own section tbh.

This Octree is completely templated, meaning that I can determine what data source I want to store in the octree, then go from there. This is really good because if I want to use it for Entities on the game engine side for scene partitioning, it can! If I wanted to use it for terrain LOD in the future, I CAN! It was honestly such a headache to implement though due to the recursive nature of an octree.

So basically this is how it works. The OctreeBounds holds a pointer to the root node as a OctreeBoundsNode class.

The root node holds a size_t for the size of data sources contained in this node, the size of data sources contained in this and all child nodes, and a index for where this data begins.

All data is stored within a single global vector in the OctreeBounds class, so validation of node start index and size needs to be updated every single time a change is made to the octree such as inserting or removing data sources.

The Octree will shrink and grow dynamically, so if a data source is attempted to be inserted outside of the octree, it will grow enough to fit that new data source.

If the root node has no data sources and has only one child with data sources, it will shrink.

That is pretty much how it works, but here is a GameDev Stack Exchange question and answer I made in relation to this particular design. Sadly no one answered or commented but myself, but it's a good resource to have up there for years to come if anyone else tries this.

https://gamedev.stackexchange.com/questions/211647/octree-query-frustum-search-and-recursive-vector-inserts

- Louron Core -

Updated Profiler class to include accumulative timers. These will accumulate multiple times throughout a frame, and will be cleared at the start of each frame. This is useful for recursive functions that you want to measure where each profiler used to just overwrite the previous on

--- a/Louron Sandbox/imgui.ini
+++ b/Louron Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Louron Editor Dockspace Window]
 Pos=0,0
-Size=1920,991
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -14,8 +14,8 @@ Size=1384,711
 Collapsed=0
 
 [Window][Scene]
-Pos=332,19
-Size=1122,972
+Pos=356,19
+Size=898,881
 Collapsed=0
 DockId=0x00000009,0
 
@@ -26,8 +26,8 @@ Size=1099,979
 Collapsed=0
 
 [Window][Asset Registry]
-Pos=828,19
-Size=306,881
+Pos=1248,19
+Size=326,990
 Collapsed=0
 DockId=0x00000008,0
 
@@ -46,8 +46,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=0,459
-Size=330,532
+Pos=0,364
+Size=354,536
 Collapsed=0
 DockId=0x00000006,0
 
@@ -59,15 +59,15 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=330,438
+Size=354,343
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties Panel]
-Pos=1456,19
-Size=464,641
+Pos=1256,19
+Size=344,881
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000B,1
 
 [Window][Dear ImGui Demo/##Basket_745C408A]
 IsChild=1
@@ -105,10 +105,16 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Render Stats]
-Pos=1456,662
-Size=464,329
+Pos=1586,502
+Size=321,398
 Collapsed=0
 DockId=0x0000000C,0
+
+[Window][Render]
+Pos=1256,19
+Size=344,881
+Collapsed=0
+DockId=0x0000000B,0
 
 [Table][0xAC9A836A,2]
 RefScale=13
@@ -131,17 +137,17 @@ RefScale=13
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace         ID=0xBCD3763F Window=0xF829B4E6 Pos=0,48 Size=1920,972 Split=X
-  DockNode        ID=0x00000001 Parent=0xBCD3763F SizeRef=1134,881 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=330,881 Split=Y Selected=0x1E6EB881
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=330,446 Selected=0x2E9237F7
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=330,542 Selected=0x1E6EB881
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=802,881 Split=X Selected=0xE192E354
-      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=665,881 Split=X Selected=0xE192E354
+DockSpace         ID=0xBCD3763F Window=0xF829B4E6 Pos=112,154 Size=1600,881 Split=X
+  DockNode        ID=0x00000001 Parent=0xBCD3763F SizeRef=1254,881 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=354,881 Split=Y Selected=0x1E6EB881
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=330,343 Selected=0x2E9237F7
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=330,536 Selected=0x1E6EB881
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=898,881 Split=X Selected=0xE192E354
+      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=570,881 Split=X Selected=0xE192E354
         DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=665,881 CentralNode=1 Selected=0xE192E354
         DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=254,881 Selected=0x0B64774D
-      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=306,881 Selected=0xD02A5577
-  DockNode        ID=0x00000002 Parent=0xBCD3763F SizeRef=464,881 Split=Y Selected=0xB5796446
-    DockNode      ID=0x0000000B Parent=0x00000002 SizeRef=356,581 Selected=0xB5796446
-    DockNode      ID=0x0000000C Parent=0x00000002 SizeRef=356,298 Selected=0xCA526CA5
+      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=326,881 Selected=0xD02A5577
+  DockNode        ID=0x00000002 Parent=0xBCD3763F SizeRef=344,881 Split=Y Selected=0xB5796446
+    DockNode      ID=0x0000000B Parent=0x00000002 SizeRef=356,481 Selected=0x81AED595
+    DockNode      ID=0x0000000C Parent=0x00000002 SizeRef=356,398 Selected=0xCA526CA5
 
