--- a/Louron Core/Louron Core.vcxproj.filters
+++ b/Louron Core/Louron Core.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="src\Scene\Bounds.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Core\Time.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\OpenGL\Buffer.h">
