--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Louron Editor Dockspace Window]
 Pos=0,0
-Size=1600,900
+Size=1920,991
 Collapsed=0
 
 [Window][Debug##Default]
@@ -14,13 +14,13 @@ Size=1384,711
 Collapsed=0
 
 [Window][Scene]
-Pos=316,19
-Size=851,589
+Pos=342,19
+Size=1105,627
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2010,236
+ViewportPos=449,65
 ViewportId=0xE927CF2F
 Size=1180,967
 Collapsed=0
@@ -46,10 +46,10 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=0,458
-Size=314,442
+Pos=1449,615
+Size=471,376
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000008,0
 
 [Window][Dear ImGui Style Editor]
 ViewportPos=2044,295
@@ -59,15 +59,15 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=314,437
+Size=340,627
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000003,0
 
 [Window][Properties Panel]
-Pos=1169,19
-Size=431,881
+Pos=1449,19
+Size=471,594
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Dear ImGui Demo/##Basket_745C408A]
 IsChild=1
@@ -109,10 +109,10 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=316,610
-Size=851,290
+Pos=0,648
+Size=1447,343
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000E,1
 
 [Window][TopBar]
 Pos=0,19
@@ -180,6 +180,22 @@ Collapsed=0
 Size=300,125
 Collapsed=0
 
+[Window][Content Browser]
+Pos=0,648
+Size=1447,343
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Check Delete?]
+Pos=777,411
+Size=184,82
+Collapsed=0
+
+[Window][Delete?##ContentBrowserDeletePath]
+Pos=650,400
+Size=300,100
+Collapsed=0
+
 [Table][0xAC9A836A,2]
 RefScale=13
 Column 0  Width=4
@@ -200,18 +216,143 @@ Column 2  Width=126
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x8B7F3509,2]
+Column 0  Weight=1.7295
+Column 1  Weight=9.9902
+
+[Table][0xDB674557,2]
+RefScale=13
+Column 0  Width=672
+Column 1  Weight=1.0000
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
+[Table][0x0919F5A2,14]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=19
+Column 2  Width=19
+Column 3  Width=19
+Column 4  Width=19
+Column 5  Width=19
+Column 6  Width=19
+Column 7  Width=19
+Column 8  Width=19
+Column 9  Width=19
+Column 10 Width=19
+Column 11 Width=19
+Column 12 Width=19
+Column 13 Width=19
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
+[Table][0xC9935533,3]
+Column 0  Weight=0.3336
+Column 1  Weight=1.6655
+Column 2  Weight=1.0009
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=190
+Column 1  Width=257
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=111
+Column 1  Width=155
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=0.3306
+Column 4  Weight=1.6694
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0xC179E37C,3]
+RefScale=13
+Column 0  Width=108 Sort=0v
+Column 1  Width=63
+Column 2  Width=-1
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=42
+Column 3  Weight=1.0000
+
 [Docking][Data]
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=268,310 Size=1600,881 Split=X
-  DockNode          ID=0x00000007 Parent=0xBCD3763F SizeRef=1167,881 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000007 SizeRef=314,881 Split=Y Selected=0x1E6EB881
-      DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=402,437 Selected=0x2E9237F7
-      DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=402,442 Selected=0x1E6EB881
-    DockNode        ID=0x00000004 Parent=0x00000007 SizeRef=851,881 Split=X
-      DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=1605,881 Split=Y
-        DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
-        DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=0,58 Split=Y Selected=0xE192E354
-          DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1196,589 CentralNode=1 Selected=0xE192E354
-          DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=1196,290 Selected=0x81AED595
-      DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=360,881 Selected=0xD02A5577
-  DockNode          ID=0x00000008 Parent=0xBCD3763F SizeRef=431,881 Selected=0xB5796446
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=0,48 Size=1920,972 Split=X
+  DockNode          ID=0x00000005 Parent=0xBCD3763F SizeRef=1127,881 Split=Y
+    DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,536 Split=X
+      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=340,881 Selected=0x2E9237F7
+      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=785,881 Split=X
+        DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=1605,881 Split=Y
+          DockNode  ID=0x00000001 Parent=0x0000000B SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
+          DockNode  ID=0x00000002 Parent=0x0000000B SizeRef=0,58 CentralNode=1 Selected=0xE192E354
+        DockNode    ID=0x0000000C Parent=0x00000004 SizeRef=360,881 Selected=0xD02A5577
+    DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,343 Selected=0xBF096F38
+  DockNode          ID=0x00000006 Parent=0xBCD3763F SizeRef=471,881 Split=Y Selected=0xB5796446
+    DockNode        ID=0x00000007 Parent=0x00000006 SizeRef=431,538 Selected=0xB5796446
+    DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=431,341 Selected=0x1E6EB881
 
