Prefabs, Instantiate in Scripting, Creating Assets, and More Physics!
- Louron Core -

Included Prefab to Asset Importer functions.

PREFAB INSTANTIATION AND SERIALISATION! You can now create prefabs by dragging an entity into the content browser and it will serialise the data into a ".lprefab" file type. I want to make a PrefabComponent that is attached to an entity when it is brought into the scene (ONLY IN EDITOR MODE) so that you can see if the prefab clone in scene has any changes made to it. When the scene is running, we don't actually need this. Maybe a better way would just to store changes made to entities in a map in the Louron Editor opposed to Louron Core? IDK more thinking on this one.

Scripts can instantiate prefabs aswell - you can create a "public Prefab" type in your script, and attach a prefab to it in the editor. Then if you call Instantiate in your script, and pass it that prefab, you can create it in scene!

Added Script callbacks for getting/setting parent objects, so you can child an entity to another entity, or you can detach children from parents, etc.

Moved NormalisePath to AssetManager - maybe I should just do a function like GetHandle(asset_type, file_path).

Added CreateAsset to AssetManager objects. This is for when I want to create a new asset from a filepath. This will be good for when I setup the filewatcher on the Content Browser.

Yet again fixed some issues with the physics system, copy/move was still not perfect for colliders and rigidbody. Also made sure that if the RigidbodyFlag_TransformUpdated is set in the PhysicsUpdate, that it skips updating the transform with the physics simulation for that frame. There was issues with Prefab instantiation where the rigidbody global pose was overwritting the manual transform updates when instantiating a prefab so most of them were instantiating at 0,0,0.

Added explicit copy/move functions for TransformComponent and HierarchyComponent for ENTT purposes to ensure that no data is being lo

--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Louron Editor Dockspace Window]
 Pos=0,0
-Size=1920,991
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -14,8 +14,8 @@ Size=1384,711
 Collapsed=0
 
 [Window][Scene]
-Pos=342,19
-Size=1105,627
+Pos=282,19
+Size=927,539
 Collapsed=0
 DockId=0x00000002,0
 
@@ -26,8 +26,8 @@ Size=1180,967
 Collapsed=0
 
 [Window][Asset Registry]
-Pos=807,19
-Size=360,881
+Pos=2689,19
+Size=360,1008
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -46,8 +46,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=1449,615
-Size=471,376
+Pos=756,560
+Size=453,340
 Collapsed=0
 DockId=0x00000008,0
 
@@ -59,15 +59,15 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=340,627
+Size=280,539
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties Panel]
-Pos=1449,19
-Size=471,594
+Pos=1211,19
+Size=389,881
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000006,0
 
 [Window][Dear ImGui Demo/##Basket_745C408A]
 IsChild=1
@@ -109,10 +109,10 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,648
-Size=1447,343
+Pos=0,560
+Size=754,340
 Collapsed=0
-DockId=0x0000000E,1
+DockId=0x00000007,1
 
 [Window][TopBar]
 Pos=0,19
@@ -152,7 +152,7 @@ Size=300,100
 Collapsed=0
 
 [Window][Script Error]
-Pos=600,425
+Pos=514,339
 Size=400,50
 Collapsed=0
 
@@ -181,10 +181,10 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,648
-Size=1447,343
+Pos=0,560
+Size=754,340
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000007,0
 
 [Window][Check Delete?]
 Pos=777,411
@@ -342,17 +342,17 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=0,48 Size=1920,972 Split=X
-  DockNode          ID=0x00000005 Parent=0xBCD3763F SizeRef=1127,881 Split=Y
-    DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,536 Split=X
-      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=340,881 Selected=0x2E9237F7
-      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=785,881 Split=X
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=346,388 Size=1600,881 Split=X
+  DockNode          ID=0x00000005 Parent=0xBCD3763F SizeRef=1209,881 Split=Y
+    DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,539 Split=X
+      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=280,881 Selected=0x2E9237F7
+      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=927,881 Split=X
         DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=1605,881 Split=Y
           DockNode  ID=0x00000001 Parent=0x0000000B SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
           DockNode  ID=0x00000002 Parent=0x0000000B SizeRef=0,58 CentralNode=1 Selected=0xE192E354
         DockNode    ID=0x0000000C Parent=0x00000004 SizeRef=360,881 Selected=0xD02A5577
-    DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,343 Selected=0xBF096F38
-  DockNode          ID=0x00000006 Parent=0xBCD3763F SizeRef=471,881 Split=Y Selected=0xB5796446
-    DockNode        ID=0x00000007 Parent=0x00000006 SizeRef=431,538 Selected=0xB5796446
-    DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=431,341 Selected=0x1E6EB881
+    DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,340 Split=X Selected=0xBF096F38
+      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=754,340 Selected=0x81AED595
+      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=453,340 Selected=0x1E6EB881
+  DockNode          ID=0x00000006 Parent=0xBCD3763F SizeRef=389,881 Selected=0xB5796446
 
