--- a/Louron Editor/Sandbox Project/Scripts/SandboxProject.csproj
+++ b/Louron Editor/Sandbox Project/Scripts/SandboxProject.csproj
@@ -8,8 +8,9 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 
-    <BaseOutputPath>Binaries</BaseOutputPath>
     <OutputPath>Binaries</OutputPath>
+    <BaseOutputPath>Binaries</BaseOutputPath>
+    <BaseIntermediateOutputPath>Binaries/obj</BaseIntermediateOutputPath>
 
   </PropertyGroup>
 
