--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=282,19
-Size=927,539
+Size=926,530
 Collapsed=0
 DockId=0x00000002,0
 
@@ -26,8 +26,8 @@ Size=1180,967
 Collapsed=0
 
 [Window][Asset Registry]
-Pos=2689,19
-Size=360,1008
+Pos=848,19
+Size=360,530
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -46,8 +46,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=756,560
-Size=453,340
+Pos=756,551
+Size=452,349
 Collapsed=0
 DockId=0x00000008,0
 
@@ -59,13 +59,13 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=280,539
+Size=280,530
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties Panel]
-Pos=1211,19
-Size=389,881
+Pos=1210,19
+Size=390,881
 Collapsed=0
 DockId=0x00000006,0
 
@@ -109,10 +109,10 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,560
-Size=754,340
+Pos=0,551
+Size=754,349
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000007,0
 
 [Window][TopBar]
 Pos=0,19
@@ -152,7 +152,7 @@ Size=300,100
 Collapsed=0
 
 [Window][Script Error]
-Pos=514,339
+Pos=600,425
 Size=400,50
 Collapsed=0
 
@@ -181,10 +181,10 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,560
-Size=754,340
+Pos=0,551
+Size=754,349
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000007,1
 
 [Window][Check Delete?]
 Pos=777,411
@@ -342,17 +342,17 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=346,388 Size=1600,881 Split=X
-  DockNode          ID=0x00000005 Parent=0xBCD3763F SizeRef=1209,881 Split=Y
-    DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,539 Split=X
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=112,154 Size=1600,881 Split=X
+  DockNode          ID=0x00000005 Parent=0xBCD3763F SizeRef=1208,881 Split=Y
+    DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,530 Split=X
       DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=280,881 Selected=0x2E9237F7
-      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=927,881 Split=X
+      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=926,881 Split=X
         DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=1605,881 Split=Y
           DockNode  ID=0x00000001 Parent=0x0000000B SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
           DockNode  ID=0x00000002 Parent=0x0000000B SizeRef=0,58 CentralNode=1 Selected=0xE192E354
         DockNode    ID=0x0000000C Parent=0x00000004 SizeRef=360,881 Selected=0xD02A5577
-    DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,340 Split=X Selected=0xBF096F38
-      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=754,340 Selected=0x81AED595
-      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=453,340 Selected=0x1E6EB881
-  DockNode          ID=0x00000006 Parent=0xBCD3763F SizeRef=389,881 Selected=0xB5796446
+    DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,349 Split=X Selected=0xBF096F38
+      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=754,340 Selected=0xBF096F38
+      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=452,340 Selected=0x1E6EB881
+  DockNode          ID=0x00000006 Parent=0xBCD3763F SizeRef=390,881 Selected=0xB5796446
 
