Editor and Scene Camera Separation, Render Pipeline Updates
- Louron Core -

Implemented separation of camera system for the editor, and in-game Main Camera. Was using the old school LearnOpenGL camera up to this point for everything, but now the editor camera is separated from the play state of the game. In game cameras can be controlled using C# scripting, see example camera move script.

Forward+ render pipeline does not find the applicable camera to render from anymore, it merely takes the camera position, projection matrix and view matrix. In Scene, this is where we find the appropriate camera to render to, and pass that to the render pipeline.

Materials have updated aswell so they only take the same values, camera position, projection, and view, opposed to passing a camera pointer around.

Updated serialisation of camera components to match new system.

Added stencil component to depth texture in FBO for stenciling later on. I want to do object outlining in the editor, so fingers crossed I can get it to work!

Moved static ScriptConnector functions into the ScriptConnector class. This is so that if I need to set any properties for when callbacks are using, I can do it now through the ScriptConnector class. E.g., disable or enable receiving input in the scripts?

- Louron Editor -

Updated shader to fix attenuation formula. I was multiplying the attenuation by the light intensity twice leading to being unable to get the full colour the light is outputting.

Implemented rudimentary exposure tone mapping.

Created stencil shader.

Created afew scripts, flashlight toggle, Camera Move Script.

Updated cameracomponent control in properties panel, need to add ortho support.

After clicking play, you can click into the scene to hide the cursor for *immersion*. Press escape to toggle out.

Implemented ImGuizmo, allowing you to click onto entities in the scene, then manipulate their transform using a GUI gizmo. G = transform, S = Scale, R = Rotate.

Editor camera is no

--- a/Louron Core/Louron Core.vcxproj
+++ b/Louron Core/Louron Core.vcxproj
@@ -116,6 +116,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Renderer\Camera.cpp" />
     <ClCompile Include="include\glm\detail\glm.cpp" />
     <ClCompile Include="include\glm\out\build\x64-Debug (default)\CMakeFiles\3.18.20081302-MSVC_2\CompilerIdCXX\CMakeCXXCompilerId.cpp" />
     <ClCompile Include="include\glm\out\build\x64-Debug (default)\CMakeFiles\3.18.20081302-MSVC_2\CompilerIdC\CMakeCCompilerId.c" />
@@ -155,7 +156,6 @@
     <ClCompile Include="src\Scene\Components\Physics\Collider.cpp" />
     <ClCompile Include="src\Scene\Components\Components.cpp" />
     <ClCompile Include="src\Scene\Components\Mesh.cpp" />
-    <ClCompile Include="src\Scene\Components\Camera.cpp" />
     <ClCompile Include="src\Scene\Components\Physics\CollisionCallback.cpp" />
     <ClCompile Include="src\Scene\Components\Physics\PhysicsWrappers.cpp" />
     <ClCompile Include="src\Scene\Components\Physics\Rigidbody.cpp" />
@@ -177,6 +177,7 @@
     <ClCompile Include="src\Scripting\Script Manager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Renderer\Camera.h" />
     <ClInclude Include="include\assimp\aabb.h" />
     <ClInclude Include="include\assimp\ai_assert.h" />
     <ClInclude Include="include\assimp\anim.h" />
@@ -746,7 +747,6 @@
     <ClInclude Include="src\OpenGL\Material.h" />
     <ClInclude Include="src\Scene\Components\Mesh.h" />
     <ClInclude Include="src\OpenGL\Vertex Array.h" />
-    <ClInclude Include="src\Scene\Components\Camera.h" />
     <ClInclude Include="src\Scene\Components\Components.h" />
     <ClInclude Include="src\Scene\Entity.h" />
     <ClInclude Include="src\OpenGL\Texture.h" />
