--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -26,10 +26,10 @@ Size=1180,967
 Collapsed=0
 
 [Window][Asset Registry]
-Pos=848,19
-Size=360,530
+ViewportPos=2496,177
+ViewportId=0x54CB1100
+Size=548,850
 Collapsed=0
-DockId=0x0000000C,0
 
 [Window][DockSpace Demo]
 Size=1600,900
@@ -112,7 +112,7 @@ Collapsed=0
 Pos=0,551
 Size=754,349
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000007,1
 
 [Window][TopBar]
 Pos=0,19
@@ -126,7 +126,7 @@ Size=400,125
 Collapsed=0
 
 [Window][New Scene]
-Pos=600,400
+Pos=-1406,159
 Size=400,100
 Collapsed=0
 
@@ -139,7 +139,7 @@ Collapsed=0
 Pos=1244,19
 Size=356,881
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x00000004,1
 
 [Window][Create New Script]
 Pos=650,400
@@ -184,7 +184,7 @@ Collapsed=0
 Pos=0,551
 Size=754,349
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000007,0
 
 [Window][Check Delete?]
 Pos=777,411
@@ -342,17 +342,15 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=112,154 Size=1600,881 Split=X
-  DockNode          ID=0x00000005 Parent=0xBCD3763F SizeRef=1208,881 Split=Y
-    DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,530 Split=X
-      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=280,881 Selected=0x2E9237F7
-      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=926,881 Split=X
-        DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=1605,881 Split=Y
-          DockNode  ID=0x00000001 Parent=0x0000000B SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
-          DockNode  ID=0x00000002 Parent=0x0000000B SizeRef=0,58 CentralNode=1 Selected=0xE192E354
-        DockNode    ID=0x0000000C Parent=0x00000004 SizeRef=360,881 Selected=0xD02A5577
-    DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,349 Split=X Selected=0xBF096F38
-      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=754,340 Selected=0xBF096F38
-      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=452,340 Selected=0x1E6EB881
-  DockNode          ID=0x00000006 Parent=0xBCD3763F SizeRef=390,881 Selected=0xB5796446
+DockSpace         ID=0xBCD3763F Window=0xF829B4E6 Pos=320,362 Size=1600,881 Split=X
+  DockNode        ID=0x00000005 Parent=0xBCD3763F SizeRef=1208,881 Split=Y
+    DockNode      ID=0x0000000D Parent=0x00000005 SizeRef=1920,530 Split=X
+      DockNode    ID=0x00000003 Parent=0x0000000D SizeRef=280,881 Selected=0x2E9237F7
+      DockNode    ID=0x00000004 Parent=0x0000000D SizeRef=926,881 Split=Y
+        DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
+        DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=0,58 CentralNode=1 Selected=0xE192E354
+    DockNode      ID=0x0000000E Parent=0x00000005 SizeRef=1920,349 Split=X Selected=0xBF096F38
+      DockNode    ID=0x00000007 Parent=0x0000000E SizeRef=754,340 Selected=0x81AED595
+      DockNode    ID=0x00000008 Parent=0x0000000E SizeRef=452,340 Selected=0x1E6EB881
+  DockNode        ID=0x00000006 Parent=0xBCD3763F SizeRef=390,881 Selected=0xB5796446
 
